Lint: new Locale(String) -> Locale.of(String)